fix livesearch word wrapping issue closes https://github.com/plone/Products.CMFPlone/issues/580

--- a/mockup/patterns/livesearch/pattern.livesearch.less
+++ b/mockup/patterns/livesearch/pattern.livesearch.less
@@ -21,6 +21,7 @@
         list-style: none;
 
         li{
+            white-space: normal;
             margin: 0;
             padding: 5px;
             cursor: pointer;
